
(rule
 (targets coq-pkgs)
 (deps
  (package coq-fcsl-pcm))
 (action
  (run npx %{env:pkgtool=jscoq} build workdir --top fcsl
                   --load ../mathcomp/coq-pkgs/mathcomp-ssreflect.coq-pkg
                   --package coq-pkgs/fcsl-pcm.coq-pkg)))

(alias
 (name all)
 (deps package.json))

(dirs workdir)
